// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavePopup should render with Add Note when noteId is empty 1`] = `
<div>
  <div
    class="bx--modal bx--modal-tall is-visible next-ui ot-notes-popup"
    role="presentation"
  >
    <span
      class="bx--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
    <div
      aria-label="[object Object]"
      aria-modal="true"
      class="bx--modal-container"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="bx--modal-header"
      >
        
        <h3
          class="bx--modal-header__heading"
          id="bx--modal-header__heading--modal-1"
        >
          Add Note
        </h3>
        <button
          aria-label="close"
          class="bx--modal-close"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="bx--modal-close__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
            />
          </svg>
        </button>
      </div>
      <div
        aria-labelledby="bx--modal-header__heading--modal-1"
        class="bx--modal-content"
        id="bx--modal-body--modal-1"
      >
        <div
          class="bx--form-item"
        >
          <div
            class="bx--text-area__label-wrapper"
          >
            <label
              class="bx--label"
            >
              Notes
            </label>
          </div>
          <div
            class="bx--text-area__wrapper"
          >
            <textarea
              class="bx--text-area"
              cols="50"
              placeholder="Enter a maximum of 150 characters"
              rows="4"
            />
          </div>
        </div>
        <div
          style="height: 20px;"
        />
        <div
          class="date-range"
        >
          <div>
            <div
              class="bx--form-item"
            >
              <div
                class="bx--date-picker bx--date-picker--single"
              >
                <div
                  class="bx--date-picker-container"
                >
                  <label
                    class="bx--label"
                    for="date-picker-input-id-start"
                  >
                    Start date
                  </label>
                  <div
                    class="bx--date-picker-input__wrapper"
                  >
                    <input
                      class="bx--date-picker__input flatpickr-input"
                      id="date-picker-input-id-start"
                      pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                      placeholder="dd/mm/yyyy"
                      type="text"
                    />
                    <svg
                      aria-hidden="true"
                      class="bx--date-picker__icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="height: 20px;"
            />
          </div>
          <div>
            <div
              class="bx--form-item"
            >
              <div
                class="bx--date-picker bx--date-picker--single"
              >
                <div
                  class="bx--date-picker-container"
                >
                  <label
                    class="bx--label"
                    for="date-picker-input-id-finish"
                  >
                    End date
                  </label>
                  <div
                    class="bx--date-picker-input__wrapper"
                  >
                    <input
                      class="bx--date-picker__input flatpickr-input"
                      id="date-picker-input-id-finish"
                      pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                      placeholder="dd/mm/yyyy"
                      type="text"
                    />
                    <svg
                      aria-hidden="true"
                      class="bx--date-picker__icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="height: 20px;"
            />
          </div>
        </div>
      </div>
      <div
        class="bx--modal-footer bx--btn-set"
      >
        <button
          class="bx--btn bx--btn--secondary"
          tabindex="0"
          type="button"
        >
          Cancel
        </button>
        <button
          class="bx--btn bx--btn--primary"
          tabindex="0"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
    <span
      class="bx--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;

exports[`SavePopup should render with Update Note when noteId is defined 1`] = `
<div>
  <div
    class="bx--modal bx--modal-tall is-visible next-ui ot-notes-popup"
    role="presentation"
  >
    <span
      class="bx--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
    <div
      aria-label="[object Object]"
      aria-modal="true"
      class="bx--modal-container"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="bx--modal-header"
      >
        
        <h3
          class="bx--modal-header__heading"
          id="bx--modal-header__heading--modal-2"
        >
          Update Note
        </h3>
        <button
          aria-label="close"
          class="bx--modal-close"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="bx--modal-close__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
            />
          </svg>
        </button>
      </div>
      <div
        aria-labelledby="bx--modal-header__heading--modal-2"
        class="bx--modal-content"
        id="bx--modal-body--modal-2"
      >
        <div
          class="bx--form-item"
        >
          <div
            class="bx--text-area__label-wrapper"
          >
            <label
              class="bx--label"
            >
              Notes
            </label>
          </div>
          <div
            class="bx--text-area__wrapper"
          >
            <textarea
              class="bx--text-area"
              cols="50"
              placeholder="Enter a maximum of 150 characters"
              rows="4"
            >
              notes for the day
            </textarea>
          </div>
        </div>
        <div
          style="height: 20px;"
        />
        <div
          class="date-range"
        >
          <div>
            <div
              class="bx--form-item"
            >
              <div
                class="bx--date-picker bx--date-picker--single"
              >
                <div
                  class="bx--date-picker-container"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="date-picker-input-id-start"
                  >
                    Start date
                  </label>
                  <div
                    class="bx--date-picker-input__wrapper"
                  >
                    <input
                      class="bx--date-picker__input flatpickr-input"
                      disabled=""
                      id="date-picker-input-id-start"
                      pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                      placeholder="dd/mm/yyyy"
                      type="text"
                    />
                    <svg
                      aria-hidden="true"
                      class="bx--date-picker__icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="height: 20px;"
            />
          </div>
          <div>
            <div
              class="bx--form-item"
            >
              <div
                class="bx--date-picker bx--date-picker--single"
              >
                <div
                  class="bx--date-picker-container"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="date-picker-input-id-finish"
                  >
                    End date
                  </label>
                  <div
                    class="bx--date-picker-input__wrapper"
                  >
                    <input
                      class="bx--date-picker__input flatpickr-input"
                      disabled=""
                      id="date-picker-input-id-finish"
                      pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                      placeholder="dd/mm/yyyy"
                      type="text"
                    />
                    <svg
                      aria-hidden="true"
                      class="bx--date-picker__icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="height: 20px;"
            />
          </div>
        </div>
      </div>
      <div
        class="bx--modal-footer bx--btn-set"
      >
        <button
          class="bx--btn bx--btn--secondary"
          tabindex="0"
          type="button"
        >
          Cancel
        </button>
        <button
          class="bx--btn bx--btn--primary"
          tabindex="0"
          type="button"
        >
          Update
        </button>
      </div>
    </div>
    <span
      class="bx--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;
